# AGI-in-a-box

./: .env.example  Dockerfile  Dockerfile.crewai  LICENSE  README.md  configure-machine-parts.py  docker-compose.yml  pyproject.toml
deploy/: init-db.sql  prometheus.yml
docs/: DEPLOYMENT.md
geometry_router/: __init__.py  server.py
geometry_router/docs/: ARCHITECTURE.md
geometry_router/examples/: __init__.py  demo_routing.py
geometry_router/models/: __init__.py  registry.py
geometry_router/routing/: __init__.py  router.py
geometry_router/topology/: __init__.py  feature_extractor.py
k8s/base/: configmaps.yaml  crewai-deployment.yaml  ingress.yaml  kustomization.yaml  model-pool-statefulset.yaml  namespace.yaml  redis-deployment.yaml  router-deployment.yaml  secrets.yaml  storage.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
openprose/: __init__.py
openprose/examples/: __init__.py  research_workflow.py
openprose/pipelines/: __init__.py  orchestrator.py
openprose/prompts/: __init__.py  loader.py
openprose/prompts/collections/: viral_research_tools.yaml
openprose/vm/: __init__.py  prose_vm.py  sandbox.py
